[gd_scene load_steps=5 format=3 uid="uid://bo42kq6m8yqks"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_bdjvm"]
[ext_resource type="Texture2D" uid="uid://d0ygmhs6ktjs8" path="res://icon.svg" id="2_2ddgl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbiqy"]
size = Vector2(63, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrr6h"]
size = Vector2(65, 65)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_bdjvm")
speed = 400

[node name="FirePoint" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2ddgl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_rbiqy")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_jrr6h")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
